--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,5 +29,6 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+            <uses-permissionAndroid:name="Android.permission.INTERNET"/>
     </application>
 </manifest>
